# day

./: .gitignore  Cargo.toml  DESIGN.md
apps/day-arkui-demo/: Cargo.toml  Day.toml  day.yaml
apps/day-arkui-demo/dayscript/: walkthrough.yaml
apps/day-arkui-demo/harmony/: .gitignore  build-profile.json5  build.sh  setup-signing.mjs  sign-hap.mjs  sign-hap.sh
apps/day-arkui-demo/platform/ohos/: .gitignore  build-profile.json5
apps/day-arkui-demo/src/: lib.rs
apps/daylite/: Cargo.toml  Day.toml  README.md
apps/daylite/dayscript/: fr.yaml  smoke.yaml
apps/daylite/miniapps/tictactoe/: app.ts  manifest.json
apps/daylite/miniapps/todo/: app.ts  manifest.json
apps/daylite/miniapps/weather/: app.ts  manifest.json
apps/daylite/platform/android/: settings.gradle.kts
apps/daylite/src/: bundled.rs  lib.rs  main.rs
apps/matrix/: Cargo.toml  DESIGN.md  Day.toml  day.yaml
apps/matrix/dayscript/: login-render.yaml
apps/matrix/docs/: matrix-sdk-0.14-cheatsheet.md
apps/matrix/matrix-core/: Cargo.toml
apps/matrix/matrix-core/src/: lib.rs
apps/matrix/scripts/: full-demo.yaml  login-demo.yaml
apps/matrix/src/: lib.rs  main.rs
apps/showcase/: Cargo.toml  Day.toml  build.rs  day.yaml
apps/showcase/dayscript/: battery-shot.yaml  dates-shot.yaml  lottie-speed.yaml  lottie-step.yaml  map-shot.yaml  resources-shot.yaml  shapes-check.yaml  text.yaml  walkthrough.yaml
apps/showcase/harmony/: .gitignore  build-profile.json5  sign-hap.sh
apps/showcase/icons/: README.md
apps/showcase/locales/ar/: app.ftl
apps/showcase/scripts/: battery-shot.yaml  clipboard-roundtrip.yaml  files.yaml  lottie-speed.yaml  lottie-step.yaml  menus-hold.yaml  ohos-demo.yaml  rtl-check.yaml  shapes-check.yaml  text.yaml  walkthrough.yaml
apps/showcase/src/: lib.rs  main.rs  widgets.rs
crates/day/: Cargo.toml  README.md
crates/day-battery/: Cargo.toml
crates/day-battery/examples/: battery.rs
crates/day-battery/src/: android.rs  lib.rs
crates/day-build/: Cargo.toml  README.md
crates/day-build/src/: lib.rs
crates/day-cli/: Cargo.toml  README.md  build.rs
crates/day-cli/resources/: day-toml.schema.json
crates/day-cli/src/: cli.rs  doctor.rs  drive.rs  interactive.rs  intl.rs  lint.rs  lite.rs  main.rs  mcp.rs  meta.rs  metadata.rs  mobile.rs  new.rs  ohos.rs  ops.rs  pack.rs  pieces.rs  script.rs  sessions.rs  sign.rs  signals.rs  targets.rs  template.rs  term.rs  update.rs
crates/day-cli/tests/: layering.rs
crates/day-core/: Cargo.toml  README.md
crates/day-core/src/: anim.rs  build.rs  frame.rs  layout.rs  lib.rs  lifecycle.rs  list.rs  menu.rs  nav.rs  present.rs  shield.rs  tree.rs
crates/day-fluent/: Cargo.toml  README.md
crates/day-fluent/src/: lib.rs
crates/day-fonts/: Cargo.toml  README.md
crates/day-fonts/src/: lib.rs
crates/day-l10n/: Cargo.toml  README.md
crates/day-l10n/catalog/: de.ftl  en.ftl  es.ftl  fr.ftl  ja.ftl  zh.ftl
crates/day-l10n/src/: collate.rs  intl.rs  lib.rs
crates/day-l10n/tests/: intl.rs
crates/day-lite/: Cargo.toml
crates/day-lite/src/: bootstrap.js  bridges.rs  db.rs  engine.rs  fsx.rs  i18n.rs  lib.rs  sleep.rs  store.rs  testrun.rs  ts.rs  value.rs
crates/day-lite/tests/: e2e.rs  mock_ui.rs
crates/day-pieces/: Cargo.toml  README.md
crates/day-pieces/src/: canvas.rs  containers.rs  decorators.rs  dialogs.rs  dynreg.rs  forms.rs  image.rs  inputs.rs  leaves.rs  lib.rs  menus.rs  nav.rs  render.rs  shapes.rs  sources.rs  structure.rs
crates/day-pieces/tests/: anim.rs  grid.rs  mock_e2e.rs
crates/day-script/: Cargo.toml  README.md
crates/day-script/src/: lib.rs
crates/day-spec/: Cargo.toml  README.md
crates/day-spec/src/: lib.rs  resource.rs
crates/day-toolchain/: Cargo.toml  README.md
crates/day-toolchain/src/: lib.rs
crates/day/src/: lib.rs
parts/day-part-clipboard/: Cargo.toml  README.md
parts/day-part-clipboard/examples/: clipboard.rs
parts/day-part-clipboard/src/: android.rs  ios.rs  lib.rs  linux.rs  macos.rs  ohos.rs  windows.rs
parts/day-part-deviceinfo/: Cargo.toml  README.md
parts/day-part-deviceinfo/examples/: deviceinfo.rs
parts/day-part-deviceinfo/src/: android.rs  ios.rs  lib.rs  linux.rs  macos.rs  ohos.rs  windows.rs
parts/day-part-haptics/: Cargo.toml  README.md
parts/day-part-haptics/examples/: haptics.rs
parts/day-part-haptics/src/: android.rs  ios.rs  lib.rs  macos.rs
parts/day-part-http/: Cargo.toml  README.md
parts/day-part-http/examples/: http.rs
parts/day-part-http/src/: android.rs  apple.rs  fallback.rs  lib.rs  windows.rs
parts/day-part-http/tests/: http.rs
parts/day-part-network/: Cargo.toml  README.md
parts/day-part-network/examples/: network.rs
parts/day-part-network/src/: android.rs  apple.rs  lib.rs  linux.rs  ohos.rs  windows.rs
parts/day-part-prefs/: Cargo.toml  README.md
parts/day-part-prefs/examples/: prefs.rs
parts/day-part-prefs/src/: android.rs  apple.rs  file.rs  lib.rs
parts/day-part-sensors/: Cargo.toml  README.md
parts/day-part-sensors/examples/: sensors.rs
parts/day-part-sensors/src/: android.rs  ios.rs  lib.rs  linux.rs  macos.rs  ohos.rs  windows.rs
pieces/day-piece-activity/: Cargo.toml  README.md  build.rs
pieces/day-piece-activity/src/: lib-android.rs  lib-appkit.rs  lib-gtk.rs  lib-qt-shim.cpp  lib-qt.rs  lib-uikit.rs  lib-winui-shim.cpp  lib-winui.rs  lib.rs
pieces/day-piece-combobox/: Cargo.toml  README.md  build.rs
pieces/day-piece-combobox/src/: lib-android.rs  lib-appkit.rs  lib-gtk.rs  lib-qt-shim.cpp  lib-qt.rs  lib-winui-shim.cpp  lib-winui.rs  lib.rs  qt_shim.cpp
pieces/day-piece-datetime/: Cargo.toml  README.md  build.rs
pieces/day-piece-datetime/src/: datetime-arkui.cpp  lib-android.rs  lib-appkit.rs  lib-arkui.rs  lib-gtk.rs  lib-qt-shim.cpp  lib-qt.rs  lib-uikit.rs  lib-winui-shim.cpp  lib-winui.rs  lib.rs
pieces/day-piece-datetime/tests/: mock.rs
pieces/day-piece-lottie/: Cargo.toml  README.md
pieces/day-piece-lottie/src/: lib-android.rs  lib-uikit.rs  lib.rs
pieces/day-piece-map/: Cargo.toml  README.md
pieces/day-piece-map/src/: lib-appkit.rs  lib-uikit.rs  lib.rs
(+567 files in other folders)
