[workspace]
resolver = "2"
members = [
    "crates/day-geometry",
    "crates/day-reactive",
    "crates/day-spec",
    "crates/day-mock",
    "crates/day-core",
    "crates/day-pieces",
    "crates/day-l10n",
    "crates/day-fluent",
    "crates/day-script",
    "crates/day",
    "toolkits/day-appkit",
    "toolkits/day-gtk",
    "toolkits/day-qt",
    "toolkits/day-qt-sys",
    "toolkits/day-uikit",
    "toolkits/day-android",
    "toolkits/day-winui",
    "toolkits/day-winui-sys",
    "toolkits/day-arkui",
    "toolkits/day-arkui-sys",
    "apps/showcase",
    "apps/day-arkui-demo",
    "pieces/day-piece-combobox",
    "pieces/day-piece-picker",
    "pieces/day-piece-webview",
    "pieces/day-piece-lottie",
    "pieces/day-piece-media",
    "parts/day-part-battery",
    "parts/day-part-sensors",
    "parts/day-part-clipboard",
    "parts/day-part-network",
    "parts/day-part-haptics",
    "parts/day-part-prefs",
    "parts/day-part-deviceinfo",
    "pieces/day-piece-activity",
    "pieces/day-piece-searchfield",
    "pieces/day-piece-map",
    "pieces/day-piece-remote-image",
    "pieces/day-piece-textarea",
    "pieces/day-piece-rating",
    "tweaks/day-tweak-button-bezel",
    "tweaks/day-tweak-label-selectable",
    "tweaks/day-tweak-slider-tickmarks",
    "crates/day-toolchain",
    "crates/day-cli",
]
# apps/matrix is its OWN workspace (it pulls the heavy matrix-rust-sdk tree — ~400 crates — which must
# NOT bloat this workspace's lockfile or per-backend CI). It depends on day crates + the general pieces
# by relative path. See apps/matrix/DESIGN.md.
exclude = ["apps/matrix"]
# Host-portable crates built/tested by a bare `cargo test`. Backend and app crates join as they land.
default-members = [
    "crates/day-fluent",
    "crates/day-geometry",
    "crates/day-reactive",
    "crates/day-spec",
    "crates/day-mock",
    "crates/day-core",
    "crates/day-pieces",
    "crates/day-l10n",
    "crates/day-fluent",
]

[workspace.package]
version = "0.0.3"
edition = "2024"
rust-version = "1.89"

[workspace.dependencies]
day-geometry = { path = "crates/day-geometry" }
day-reactive = { path = "crates/day-reactive" }
day-spec = { path = "crates/day-spec" }
day-mock = { path = "crates/day-mock" }
day-core = { path = "crates/day-core" }
day-pieces = { path = "crates/day-pieces" }
day-l10n = { path = "crates/day-l10n" }
day-fluent = { path = "crates/day-fluent" }
day-script = { path = "crates/day-script" }
day = { path = "crates/day" }
day-piece-combobox = { path = "pieces/day-piece-combobox" }
day-piece-picker = { path = "pieces/day-piece-picker" }
day-piece-webview = { path = "pieces/day-piece-webview" }
day-piece-lottie = { path = "pieces/day-piece-lottie" }
day-part-battery = { path = "parts/day-part-battery" }
day-part-sensors = { path = "parts/day-part-sensors" }
day-part-clipboard = { path = "parts/day-part-clipboard" }
day-part-network = { path = "parts/day-part-network" }
day-piece-media = { path = "pieces/day-piece-media" }
day-part-haptics = { path = "parts/day-part-haptics" }
day-part-prefs = { path = "parts/day-part-prefs" }
day-part-deviceinfo = { path = "parts/day-part-deviceinfo" }
day-piece-activity = { path = "pieces/day-piece-activity" }
day-piece-searchfield = { path = "pieces/day-piece-searchfield" }
day-piece-map = { path = "pieces/day-piece-map" }
day-piece-remote-image = { path = "pieces/day-piece-remote-image" }
day-piece-textarea = { path = "pieces/day-piece-textarea" }
day-piece-rating = { path = "pieces/day-piece-rating" }
# Tweaks (docs/tweaks.md): packaged per-backend configuration of built-in pieces.
day-tweak-button-bezel = { path = "tweaks/day-tweak-button-bezel" }
day-tweak-label-selectable = { path = "tweaks/day-tweak-label-selectable" }
day-tweak-slider-tickmarks = { path = "tweaks/day-tweak-slider-tickmarks" }
day-toolchain = { path = "crates/day-toolchain" }
day-appkit = { path = "toolkits/day-appkit" }
day-gtk = { path = "toolkits/day-gtk" }
day-qt = { path = "toolkits/day-qt" }
day-qt-sys = { path = "toolkits/day-qt-sys" }
day-uikit = { path = "toolkits/day-uikit" }
day-android = { path = "toolkits/day-android" }
day-winui = { path = "toolkits/day-winui" }
day-winui-sys = { path = "toolkits/day-winui-sys" }
day-arkui = { path = "toolkits/day-arkui" }
day-arkui-sys = { path = "toolkits/day-arkui-sys" }
slotmap = "1.0"
linkme = "0.3"

[profile.release]
lto = "thin"
codegen-units = 1
