[workspace]
resolver = "2"
members = [
    "crates/day-geometry",
    "crates/day-fonts",
    "crates/day-reactive",
    "crates/day-spec",
    "crates/day-mock",
    "crates/day-core",
    "crates/day-pieces",
    "crates/day-l10n",
    "crates/day-fluent",
    "crates/day-script",
    "crates/day",
    "toolkits/day-appkit",
    "toolkits/day-gtk",
    "toolkits/day-qt",
    "toolkits/day-qt-sys",
    "toolkits/day-uikit",
    "toolkits/day-android",
    "toolkits/day-winui",
    "toolkits/day-winui-sys",
    "toolkits/day-arkui",
    "toolkits/day-arkui-sys",
    "apps/showcase",
    "apps/day-arkui-demo",
    "pieces/day-piece-combobox",
    "pieces/day-piece-picker",
    "pieces/day-piece-webview",
    "pieces/day-piece-lottie",
    "pieces/day-piece-media",
    "parts/day-part-battery",
    "parts/day-part-sensors",
    "parts/day-part-clipboard",
    "parts/day-part-network",
    "parts/day-part-haptics",
    "parts/day-part-prefs",
    "parts/day-part-deviceinfo",
    "pieces/day-piece-activity",
    "pieces/day-piece-searchfield",
    "pieces/day-piece-map",
    "pieces/day-piece-remote-image",
    "pieces/day-piece-textarea",
    "pieces/day-piece-rating",
    "tweaks/day-tweak-button-bezel",
    "tweaks/day-tweak-label-selectable",
    "tweaks/day-tweak-slider-tickmarks",
    "crates/day-toolchain",
    "crates/day-cli",
]
# apps/matrix is its OWN workspace (it pulls the heavy matrix-rust-sdk tree — ~400 crates — which must
# NOT bloat this workspace's lockfile or per-backend CI). It depends on day crates + the general pieces
# by relative path. See apps/matrix/DESIGN.md.
exclude = ["apps/matrix"]
# Host-portable crates built/tested by a bare `cargo test`. Backend and app crates join as they land.
default-members = [
    "crates/day-fluent",
    "crates/day-geometry",
    "crates/day-fonts",
    "crates/day-reactive",
    "crates/day-spec",
    "crates/day-mock",
    "crates/day-core",
    "crates/day-pieces",
    "crates/day-l10n",
    "crates/day-fluent",
]

# crates.io publishing policy: for now ONLY `day-cli` and its two leaf dependencies (`day-fonts`,
# `day-toolchain`) are published, so `cargo install day-cli` works while the rest of the crate names
# stay unclaimed and free to rename. Every other member carries `publish = false`, so
# `cargo publish --workspace` (and the `release` CI job) publishes exactly those three, in dependency
# order. To publish another crate later, drop its `publish = false`.
[workspace.package]
version = "0.0.7"
authors = ["Daybrite <hello@daybrite.dev>"]
edition = "2024"
description = "Declarative app development API using native UI toolkits"
repository = "https://github.com/daybrite/day"
license = "MPL-2.0"
homepage = "https://daybrite.dev"
keywords = ["design", "graphics", "gui", "toolkit", "ui"]
categories = ["gui", "command-line-utilities"]
rust-version = "1.89"

[workspace.dependencies]
day-geometry = { path = "crates/day-geometry", version = "0.0.7" }
day-fonts = { path = "crates/day-fonts", version = "0.0.7" }
day-reactive = { path = "crates/day-reactive", version = "0.0.7" }
day-spec = { path = "crates/day-spec", version = "0.0.7" }
day-mock = { path = "crates/day-mock", version = "0.0.7" }
day-core = { path = "crates/day-core", version = "0.0.7" }
day-pieces = { path = "crates/day-pieces", version = "0.0.7" }
day-l10n = { path = "crates/day-l10n", version = "0.0.7" }
day-fluent = { path = "crates/day-fluent", version = "0.0.7" }
day-script = { path = "crates/day-script", version = "0.0.7" }
day = { path = "crates/day", version = "0.0.7" }
day-piece-combobox = { path = "pieces/day-piece-combobox", version = "0.0.7" }
day-piece-picker = { path = "pieces/day-piece-picker", version = "0.0.7" }
day-piece-webview = { path = "pieces/day-piece-webview", version = "0.0.7" }
day-piece-lottie = { path = "pieces/day-piece-lottie", version = "0.0.7" }
day-part-battery = { path = "parts/day-part-battery", version = "0.0.7" }
day-part-sensors = { path = "parts/day-part-sensors", version = "0.0.7" }
day-part-clipboard = { path = "parts/day-part-clipboard", version = "0.0.7" }
day-part-network = { path = "parts/day-part-network", version = "0.0.7" }
day-piece-media = { path = "pieces/day-piece-media", version = "0.0.7" }
day-part-haptics = { path = "parts/day-part-haptics", version = "0.0.7" }
day-part-prefs = { path = "parts/day-part-prefs", version = "0.0.7" }
day-part-deviceinfo = { path = "parts/day-part-deviceinfo", version = "0.0.7" }
day-piece-activity = { path = "pieces/day-piece-activity", version = "0.0.7" }
day-piece-searchfield = { path = "pieces/day-piece-searchfield", version = "0.0.7" }
day-piece-map = { path = "pieces/day-piece-map", version = "0.0.7" }
day-piece-remote-image = { path = "pieces/day-piece-remote-image", version = "0.0.7" }
day-piece-textarea = { path = "pieces/day-piece-textarea", version = "0.0.7" }
day-piece-rating = { path = "pieces/day-piece-rating", version = "0.0.7" }
# Tweaks (docs/tweaks.md): packaged per-backend configuration of built-in pieces.
day-tweak-button-bezel = { path = "tweaks/day-tweak-button-bezel", version = "0.0.7" }
day-tweak-label-selectable = { path = "tweaks/day-tweak-label-selectable", version = "0.0.7" }
day-tweak-slider-tickmarks = { path = "tweaks/day-tweak-slider-tickmarks", version = "0.0.7" }
day-toolchain = { path = "crates/day-toolchain", version = "0.0.7" }
day-appkit = { path = "toolkits/day-appkit", version = "0.0.7" }
day-gtk = { path = "toolkits/day-gtk", version = "0.0.7" }
day-qt = { path = "toolkits/day-qt", version = "0.0.7" }
day-qt-sys = { path = "toolkits/day-qt-sys", version = "0.0.7" }
day-uikit = { path = "toolkits/day-uikit", version = "0.0.7" }
day-android = { path = "toolkits/day-android", version = "0.0.7" }
day-winui = { path = "toolkits/day-winui", version = "0.0.7" }
day-winui-sys = { path = "toolkits/day-winui-sys", version = "0.0.7" }
day-arkui = { path = "toolkits/day-arkui", version = "0.0.7" }
day-arkui-sys = { path = "toolkits/day-arkui-sys", version = "0.0.7" }
slotmap = "1.0"
linkme = "0.3"

[profile.release]
lto = "thin"
codegen-units = 1
