[package]
name = "day-arkui-demo"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[lib]
# Built as `libentry.so` — the HarmonyOS app cdylib the ArkTS host loads (import from 'libentry.so').
name = "entry"
crate-type = ["cdylib"]

# `day build -p ohos-arkui` selects the backend via `--features arkui` (Tier A.2), like every other
# target; the `day = { features = ["arkui"] }` dep below keeps a bare `cargo build` working too.
[features]
arkui = ["day/arkui"]

[dependencies]
day = { workspace = true, features = ["arkui"] }
# The headless day-part-battery crate reads the device battery via HarmonyOS's native
# libohbattery_info.so — demonstrating a non-UI capability crate on the ArkUI backend.
day-part-battery = { workspace = true }
