# apps/matrix is its OWN workspace root (detached from the day workspace via the root's
# `exclude = ["apps/matrix"]`) so the heavy matrix-rust-sdk dependency tree stays isolated.
[workspace]
resolver = "2"
members = [".", "matrix-core"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.82"

[package]
name = "matrix"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
appkit = ["day/appkit", "day-piece-remote-image/appkit", "day-piece-textarea/appkit"]
gtk = ["day/gtk", "day-piece-remote-image/gtk", "day-piece-textarea/gtk"]
qt = ["day/qt", "day-piece-remote-image/qt", "day-piece-textarea/qt"]
uikit = ["day/uikit", "day-piece-remote-image/uikit", "day-piece-textarea/uikit"]
widget = ["day/widget", "day-piece-remote-image/widget", "day-piece-textarea/widget"]
winui = ["day/winui", "day-piece-remote-image/winui", "day-piece-textarea/winui"]
mock = ["day/mock", "day-piece-remote-image/mock", "day-piece-textarea/mock"]

[lib]
crate-type = ["rlib"]

[dependencies]
day = { path = "../../crates/day" }
matrix-core = { path = "matrix-core" }
day-piece-remote-image = { path = "../../pieces/day-piece-remote-image" }
day-piece-textarea = { path = "../../pieces/day-piece-textarea" }

[[bin]]
name = "matrix"
path = "src/main.rs"
