[package]
name = "showcase"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
appkit = ["day/appkit", "day-piece-combobox/appkit", "day-piece-picker/appkit", "day-piece-webview/appkit"]
gtk = ["day/gtk", "day-piece-combobox/gtk", "day-piece-picker/gtk", "day-piece-webview/gtk"]
qt = ["day/qt", "day-piece-combobox/qt", "day-piece-picker/qt", "day-piece-webview/qt"]
uikit = ["day/uikit", "day-piece-combobox/uikit", "day-piece-picker/uikit", "day-piece-webview/uikit", "day-piece-lottie/uikit"]
widget = ["day/widget", "day-piece-combobox/widget", "day-piece-picker/widget", "day-piece-webview/widget", "day-piece-lottie/widget"]
winui = ["day/winui", "day-piece-combobox/winui", "day-piece-picker/winui", "day-piece-webview/winui"]
mock = ["day/mock"]

# rlib for the desktop bin; the iOS staticlib and Android cdylib are requested explicitly by
# the mobile pipeline via `cargo rustc --crate-type` (day-cli mobile.rs). Keeping cdylib here
# would make every desktop build emit it too — and a Rust cdylib blows past the PE export cap
# on the windows-gnu ABI (windows-gtk / windows-qt): "too many exported symbols, max 65535".
[lib]
crate-type = ["rlib"]

[dependencies]
day = { workspace = true }
# A HEADLESS capability crate (no UI Piece): app Rust code calls day_battery::status() directly.
day-battery = { workspace = true }
day-piece-combobox = { workspace = true }
day-piece-picker = { workspace = true }
day-piece-webview = { workspace = true }
# day-piece-lottie is iOS/Android only; the front-end compiles everywhere but the `lottie` page is
# `#[cfg]`-gated to those targets. Its backend features are enabled only in `uikit`/`widget`.
day-piece-lottie = { workspace = true }

[[bin]]
name = "showcase"
path = "src/main.rs"
