[package]
name = "showcase"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

# Each backend line is JUST the `day/<backend>` toolkit. The Day CLI derives every standalone piece's
# `<pkg>/<backend>` renderer feature from `[package.metadata.day.piece]` and unions it into the build
# (Tier A.2) — so adding a piece is a plain `{ workspace = true }` dep below, with no per-backend
# feature fan-out here. (Building with bare `cargo` still works: run through `day build` so the union
# is applied, or add the piece features by hand.)
[features]
appkit = ["day/appkit"]
gtk = ["day/gtk"]
qt = ["day/qt"]
uikit = ["day/uikit"]
widget = ["day/widget"]
winui = ["day/winui"]
mock = ["day/mock"]

# rlib for the desktop bin; the iOS staticlib and Android cdylib are requested explicitly by
# the mobile pipeline via `cargo rustc --crate-type` (day-cli mobile.rs). Keeping cdylib here
# would make every desktop build emit it too — and a Rust cdylib blows past the PE export cap
# on the windows-gnu ABI (windows-gtk / windows-qt): "too many exported symbols, max 65535".
[lib]
crate-type = ["rlib"]

[dependencies]
day = { workspace = true }
# A HEADLESS capability crate (no UI Piece): app Rust code calls day_part_battery::status() directly.
day-part-battery = { workspace = true }
day-part-sensors = { workspace = true }
day-part-clipboard = { workspace = true }
day-part-network = { workspace = true }
day-piece-combobox = { workspace = true }
day-piece-picker = { workspace = true }
# A COMPOSE piece (pure composition — no native code, no cargo features): a plain dep, available on
# every backend for free. No per-backend feature wiring above, the composition-first payoff.
day-piece-rating = { workspace = true }
day-piece-webview = { workspace = true }
day-piece-media = { workspace = true }
day-part-haptics = { workspace = true }
day-part-prefs = { workspace = true }
day-part-deviceinfo = { workspace = true }
day-piece-activity = { workspace = true }
day-piece-searchfield = { workspace = true }
day-piece-map = { workspace = true }
# day-piece-lottie is iOS/Android only; the front-end compiles everywhere but the `lottie` page is
# `#[cfg]`-gated to those targets. Its backend features are enabled only in `uikit`/`widget`.
day-piece-lottie = { workspace = true }

[[bin]]
name = "showcase"
path = "src/main.rs"
